The entire key update logic has been moved to the corresponding hook, and the completed operations are passed to Redux where the state is updated. Additionally, every time learningThunks are used, the data is updated in the database for each return using a queue.

--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "cross-env NODE_ENV=production node server.js",
     "dev": "cross-env NODE_ENV=development nodemon server.js",
-    "start-worker": "node ./workers/phraseWorker.js"
+    "worker": "node ./workers/phraseWorker.js"
   },
   "keywords": [],
   "author": "Michał Krudysz",
