--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "author": "Michał Krudysz",
   "license": "All Rights Reserved",
   "dependencies": {
+    "@google-cloud/text-to-speech": "^5.3.0",
     "amqplib": "^0.10.4",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
