--- a/server/package.json
+++ b/server/package.json
@@ -29,7 +29,9 @@
     "joi": "^17.13.1",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.9.8",
-    "openai": "^4.51.0"
+    "openai": "^4.51.0",
+    "socket.io": "^4.7.5",
+    "ws": "^8.17.0"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
