--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "main": "server.js",
   "scripts": {
+    "prestart": "fkill -f :3000",
     "start": "cross-env NODE_ENV=production concurrently \"npm run server\" \"npm run workers\"",
     "dev": "cross-env NODE_ENV=development concurrently \"npm run dev-server\" \"npm run workers\"",
     "server": "node server.js",
@@ -36,6 +37,7 @@
   "devDependencies": {
     "concurrently": "^8.2.2",
     "cross-env": "^7.0.3",
+    "fkill-cli": "^8.0.0",
     "nodemon": "^3.1.1"
   }
 }
