--- a/server/package.json
+++ b/server/package.json
@@ -32,6 +32,7 @@
     "mysql2": "^3.9.8",
     "openai": "^4.51.0",
     "socket.io": "^4.7.5",
+    "uuid": "^10.0.0",
     "ws": "^8.17.0"
   },
   "devDependencies": {
