--- a/server/package.json
+++ b/server/package.json
@@ -31,6 +31,7 @@
     "joi": "^17.13.1",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.9.8",
+    "nodemailer": "^6.9.14",
     "openai": "^4.51.0",
     "socket.io": "^4.7.5",
     "uuid": "^10.0.0",
