--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,8 @@
     "react-router-dom": "^6.23.1",
     "redux-thunk": "^3.1.0",
     "reselect": "^5.1.1",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
