--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "server.js",
   "scripts": {
-    "prestart": "fkill -f :3000",
+    "prestart": "fkill -f :3000 || echo 'No process to kill on port 3000' 2>/dev/null",
     "start": "cross-env NODE_ENV=production concurrently \"npm run server\" \"npm run workers\"",
     "dev": "cross-env NODE_ENV=development concurrently \"npm run dev-server\" \"npm run workers\"",
     "server": "node server.js",
